Fixed spacing problem in card listing

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -67,3 +67,12 @@ footer a:hover {
 .achievementImageShowPage {
   height: 60vh;
 }
+
+.card {
+  overflow: hidden;
+}
+
+.card .card-image img {
+  height: 200px;
+  width: auto;
+}
